# MasterThesis

./: README.md  cargo_all_clear.sh  distribute_to_sols_and_tasks.sh
compiler/inputs/: beispiel.c1
compiler/src/: interpreter.rs  lib.rs  main.rs
compiler/src/structs/: mod.rs  refactored_syntax_tree.rs
compiler/tests/: parser_tests.rs  semantic_checker_tests.rs
compiler/tests/test_inputs/: beispiel_07_semantic_output.txt  beispiel_08.c1
sol_01/: Cargo.toml
sol_01/proptest-regressions/: main.txt
sol_01/src/: calculator.rs  main.rs  printer.rs  syntree.rs
sol_02/: Cargo.toml
sol_02/proptest-regressions/: main.txt
sol_02/src/: lib.rs
sol_02/tests/: lexer_tests.rs
sol_03/: Cargo.toml
sol_03/src/: c1_lex.rs  c1_pars.lalrpop
sol_03/src/structs/: syntax_tree.rs
sol_03/tests/: lexer_tests_korrektur.rs
sol_03/tests/test_inputs/: beispiel_03_parser_output.txt  beispiel_08_parser_output.txt  parser_if_else_01_output.txt  parser_if_else_07.c1
sol_04/src/: main.rs  semantic_checker.rs
sol_04/tests/test_inputs/: beispiel_02_semantic_output.txt  beispiel_04_parser_output.txt  beispiel_05_parser_output.txt  (+8 more)
sol_05/src/: lib.rs
sol_05/tests/: interpreter_tests.rs
task_01/: Cargo.toml  README.md
task_01/src/: calculator.rs  main.rs  printer.rs  syntree.rs
task_02/: README.md
task_02/src/: c1_lex.rs  main.rs
task_03/: README.md
task_03/src/: c1_pars.lalrpop  lexer.rs  lib.rs  main.rs
task_04/: README.md
task_04/src/: lib.rs  semantic_checker.rs
task_05/: Cargo.toml  README.md
task_05/src/: interpreter.rs  main.rs
(+28 files in other folders)
