[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.9"
proptest = "1.2.0"

[dependencies]
lalrpop-util = {version = "0.19.9", features = ["lexer"]}
regex = "1"
pico-args = "0.5"
logos = "0.12.0"
proptest = "1.2.0"
